test_scripts/errors/if_else_expr_error.stderr
 1 | let x = if true { undefined_var } else { 2 };
                       ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
